@@ -53,6 +53,79 @@
             </p>
 
             <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.3/cheese-0.3.0.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 0.3.0
+              </a>
+              <p>
+              was released on December 24th 2007<br />
+              md5sums: 4fc566d8b68020618fe81d0e6ea0232b<br />
+              </p>
+              <h3>Changes</h3>
+              <ul>
+                <li>add a shutter sound, when taking a photo</li>
+                <li>sort the thumbnail chronologically</li>
+                <li>make the effect chooser look a bit nicer</li>
+                <li>give thumbnails a frame like in nautilus and eog. fixes bug #500819</li>
+                <li>enable shortcuts if the mouse pointer is over the xoverlay. fixes bug #493196</li>
+                <li>add new shortcuts
+                <ul>
+                  <li>space for take a photo/start-stop recording</li>
+                  <li>ctrl q for exiting</li>
+                  <li>f1 for help</li>
+                  <li>delete for removing a photo or video</li>
+                </ul>
+                </li>
+                <li>add a gconf backend</li>
+                <li>chosen effects are stored in gconf. fixes bug #488834</li>
+                <li>store the used webcam device in gconf. partially fixes bug #473038</li>
+                <li>use a throbber, when the camera is loading</li>
+                <li>add drag and drop support to the iconview</li>
+                <li>vertical and horizontal flip were switched. fixes bug #479238</li>
+                <li>many usability improvements. partially fixes bug #501337</li>
+                <li>point to the right homepage in the about dialog</li>
+                <li>add a boilerplate for a manual in cheese. partially fixes #480628</li>
+                <li>make video and photo button a toggle button. fixes bug #498022</li>
+                <li>make links on about dialog clickable. fixes bug #499425</li>
+                <li>translate menu items created by gtkuimanager, fixes bug #500821</li>
+                <li>change the first item in menu to "Cheese"</li>
+                <li>add a "Move all to trash" option</li>
+                <li>use gtkuimanager for the menu</li>
+                <li>give the ability to record videos from the menu</li>
+                <li>provide access to the effect chooser using the menu</li>
+                <li>use radio buttons in the menu to change between photo and video mode</li>
+                <li>use HAL to detect webcams</li>
+                <li>make ximagesink an xvimagesink work for all cameras</li>
+                <li>only use raw video formats. fixes bug #502174</li>
+                <li>use the highest resolution for each camera</li>
+                <li>add --verbose command line option, fixes bug #499399</li>
+                <li>cheese was refactored and uses now a webcam class</li>
+                <li>removed some memory leaks</li>
+                <li>fixed many, many bugs</li>
+                <li>added/updated translations
+                <ul>
+                  <li>ar, courtesy of Djihed Afifi</li>
+                  <li>ca, courtesy of Carlos Garcia Porcel</li>
+                  <li>cs, courtesy of Vitezslav Kotrla</li>
+                  <li>de, courtesy of Andre Klapper</li>
+                  <li>el, courtesy of Athanasios Lefteris</li>
+                  <li>es, courtesy of Jorge González</li>
+                  <li>fr, courtesy of Pierre Slamich</li>
+                  <li>gl, courtesy of Ignacio Casal Quinteiro</li>
+                  <li>it, courtesy of Alessandro Falappa</li>
+                  <li>nb, courtesy of Kjartan Maraas</li>
+                  <li>oc, courtesy of Yannig Marchegay</li>
+                  <li>pt, courtesy of Miguel Rosa</li>
+                  <li>ro, courtesy of Anastase Valentin</li>
+                  <li>sl, courtesy of Deni Bačić</li>
+                  <li>sv, courtesy of Daniel Nylander</li>
+                </ul>
+                </li>
+              </ul>
+            </div>
+
+            <div class="download">
               <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/0.2/cheese-0.2.4.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
