@@ -213,6 +213,13 @@
 
         <div id="bottomRight">
           <h2>News</h2>
+          <h3>December 24th 2007</h3>
+          <p>
+          The Christmas release is out! Get it while it's hot and send us your
+          funny Christmas photos!<br/>
+          Cheese 0.3.0 was released. <a href="download.html">Get it!</a>
+          </p>
+
           <h3>December 7th 2007</h3>
           <p>
           Say cheese! Or maybe that’s Cheese? Either way, take a look at
