@@ -1,5 +1,11 @@
 2007-12-24  daniel g. siegel <dgsiegel@gmail.com>
 
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  cheese 0.3.0, yay!
+
+2007-12-24  daniel g. siegel <dgsiegel@gmail.com>
+
 	* www.gnome.org/projects/cheese/download.html: 
 	  cheese has its tarballs now on ftp.gnome.org
 
